# LocalAdventuresBack

./: .gitignore  manage.py  pyproject.toml  requirements.txt
LocalAdventuresBack/: asgi.py  settings.py  urls.py  wsgi.py
LocalAdventuresBack/settings/: base.py  local.py  prod.py
apps/invoices/: serializers.py  urls.py  views.py
apps/invoices/assets/: faqSection.json
apps/users/: admin.py  forms.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py
config/settings/: base.py  local.py  prod.py
